--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dev": "astro dev",
     "format": "prettier --write . --log-level warn",
     "link-check": "node scripts/link-check.ts",
-    "lint": "eslint . --fix --cache --cache-location .eslintcache",
+    "lint": "eslint . --fix --cache --cache-location .eslintcache && oxlint --fix",
     "preview": "astro preview",
     "test": "vitest --run"
   },
@@ -47,6 +47,7 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-oxlint": "^1.30.0",
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^62.0.0",
     "eslint-plugin-yaml": "^1.1.3",
@@ -54,6 +55,7 @@
     "jsdom": "^27.2.0",
     "link-check": "^5.5.1",
     "mdast-util-to-string": "^4.0.0",
+    "oxlint": "^1.30.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.3.0",
